Added character details
Can now track when character was first mentioned, description, location, and any notes

--- a/index.html
+++ b/index.html
@@ -23,17 +23,53 @@
             type="text"
             id="character-name-input"
             name="character-name-input"
-            placeholder="Character name"
+            placeholder="Character"
             aria-label="character name"
           />
           <br />
-          <label for="book-name-input">Book series</label>
+          <label for="book-name-input">Book name</label>
           <input
             type="text"
             id="book-name-input"
             name="book-name-input"
-            placeholder="Book name"
+            placeholder="Book"
             aria-label="book name"
+          />
+          <br />
+          <label for="first-mention-input">First mention page</label>
+          <input
+            type="text"
+            id="first-mention-input"
+            name="first-mention-input"
+            placeholder="First mention (page)"
+            aria-label="first mention page"
+          />
+          <br />
+          <label for="description-input">Description</label>
+          <input
+            type="text"
+            id="description-input"
+            name="description-input"
+            placeholder="Description"
+            aria-label="description"
+          />
+          <br />
+          <label for="location-input">Location</label>
+          <input
+            type="text"
+            id="location-input"
+            name="location-input"
+            placeholder="Location"
+            aria-label="location"
+          />
+          <br />
+          <label for="notes-input">Notes</label>
+          <input
+            type="text"
+            id="notes-input"
+            name="notes-input"
+            placeholder="Notes"
+            aria-label="notes"
           />
           <br />
           <button type="submit" id="save-btn">Save</button>
