Minor style updates

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             aria-label="notes"
           />
           <br />
-          <button type="submit" id="save-btn">Save</button>
+          <button type="submit" id="save-btn">Add</button>
         </form>
-      </main>
+      </main> 
 
       <section class="grid-container" id="character-section">
         <!-- RENDERED CHARACTER DIVS GO HERE -->
