--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/2c800347d5.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -73,6 +74,10 @@
           />
           <br />
           <button type="submit" id="save-btn">Add</button>
+          <br />
+          <button id="remove-first-btn">Remove first</button>
+          <br />
+          <button id="remove-last-btn">Remove last</button>
         </form>
       </main> 
 
