--- a/index.html
+++ b/index.html
@@ -78,10 +78,6 @@
           />
           <br />
           <button type="submit" id="save-btn">Add</button>
-          <br />
-          <button id="remove-first-btn">Remove first</button>
-          <br />
-          <button id="remove-last-btn">Remove last</button>
         </form>
       </main> 
 
@@ -90,6 +86,6 @@
       </section>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
   </body>
 </html>
