Add edit functionality

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             aria-label="notes"
           />
           <br />
-          <button type="submit" id="save-btn">Add</button>
+          <button type="submit" id="add-btn">Add</button>
         </form>
       </main> 
 
