--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             aria-label="book name"
           />
           <br />
-          <label for="first-mention-input">First mention page</label>
+          <label for="first-mention-input">First mention</label>
           <input
             type="text"
             id="first-mention-input"
             name="first-mention-input"
-            placeholder="First mention (page)"
-            aria-label="first mention page"
+            placeholder="First mention"
+            aria-label="first mention"
           />
           <br />
           <label for="description-input">Description</label>
