Expand/collapse form functionality

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
+    <!-- FONTAWESOME -->
     <script src="https://kit.fontawesome.com/2c800347d5.js" crossorigin="anonymous"></script>
+    <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,6 +25,9 @@
     <div class="container">
       <main>
         <h1>Character Log</h1>
+        <button id="new-btn" class="new-btn">
+          <i class="fa-solid fas fa-plus" data-new="new-btn" id="new-icon"></i>
+        </button>
         <form id="character-form">
           <label for="character-name-input">Character name</label>
           <input
